Pay Request functionality implementation

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -78,7 +78,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="First Name"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textCapSentences"
+                        android:inputType="text|textCapSentences|textNoSuggestions"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -137,7 +137,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Last Name"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -195,8 +195,8 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Email"
-                        android:importantForAutofill="no"
                         android:imeOptions="actionNext"
+                        android:importantForAutofill="no"
                         android:inputType="textEmailAddress|textNoSuggestions"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -294,10 +294,10 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:hint="8-12 Characters"
                             android:imeOptions="actionNext"
+                            android:importantForAutofill="no"
                             android:inputType="textPassword|textNoSuggestions"
                             android:longClickable="false"
                             android:maxLength="12"
-                            android:importantForAutofill="no"
                             android:padding="@dimen/_14sdp"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
@@ -453,14 +453,14 @@
                     android:text="@string/spannable_text"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11ssp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="@dimen/_14sdp">
+                    android:layout_marginTop="@dimen/_14sdp"
+                    android:orientation="horizontal">
 
                     <CheckBox
                         android:id="@+id/agreeCB"
