--- a/app/src/main/res/layout/activity_gift_card_binding_layout.xml
+++ b/app/src/main/res/layout/activity_gift_card_binding_layout.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="@color/white"
+    android:fitsSystemWindows="true"
     tools:context=".view.GiftCardBindingLayoutActivity">
 
     <include
@@ -16,6 +16,11 @@
     <include
         android:id="@+id/failedContainer"
         layout="@layout/buy_token_transaction_failed"
+        android:visibility="gone" />
+
+    <include
+        android:id="@+id/wdInProgressContainer"
+        layout="@layout/withdraw_token_trans_inprogress"
         android:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
