--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -80,7 +80,6 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
 
-
                         <ImageView
                             android:id="@+id/imgProfile"
                             android:layout_width="match_parent"
@@ -116,7 +115,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Alison L"
+                            android:text=""
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
@@ -127,7 +126,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:maxLines="1"
                             android:singleLine="true"
-                            android:text="Account Address"
+                            android:text=""
                             android:textColor="@color/dark_grey"
                             android:textSize="@dimen/_10ssp" />
 
@@ -150,108 +149,74 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
 
-                        <LinearLayout
+                        <RelativeLayout
                             android:id="@+id/payLL"
                             android:layout_width="match_parent"
-                            android:layout_height="80dp"
-                            android:gravity="center"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_17sdp"
                             android:orientation="horizontal"
-                            android:weightSum="5">
+                            android:paddingLeft="@dimen/_20sdp"
+                            android:paddingRight="@dimen/_30sdp">
+
+                            <TextView
+                                android:id="@+id/tvCurrency"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_toLeftOf="@+id/lyAmount"
+                                android:fontFamily="@font/opensans_bold"
+                                android:paddingTop="@dimen/_9sdp"
+                                android:paddingBottom="@dimen/_7sdp"
+                                android:text="$"
+                                android:textColor="@color/primary_black"
+                                android:textSize="@dimen/_40ssp"
+                                android:visibility="gone" />
 
                             <LinearLayout
-                                android:layout_width="0dp"
+                                android:id="@+id/lyAmount"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_20sdp"
-                                android:layout_weight="3.3"
-                                android:gravity="right"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="@dimen/_5sdp"
+                                android:layout_toLeftOf="@+id/imgConvert"
                                 android:orientation="horizontal">
-
-                                <TextView
-                                    android:id="@+id/tvCurrency"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_alignParentStart="true"
-                                    android:layout_centerVertical="true"
-                                    android:layout_marginEnd="@dimen/_5sdp"
-                                    android:fontFamily="@font/opensans_bold"
-                                    android:text="$"
-                                    android:textColor="@color/primary_black"
-                                    android:textSize="@dimen/_40ssp"
-                                    android:visibility="gone" />
 
                                 <EditText
                                     android:id="@+id/payrequestET"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_centerHorizontal="true"
-                                    android:layout_gravity="center"
-                                    android:layout_toRightOf="@id/amontDollorTV"
-                                    android:background="@android:color/transparent"
-                                    android:cursorVisible="true"
-                                    android:ellipsize="end"
+                                    android:background="@color/white"
                                     android:fontFamily="@font/opensans_bold"
                                     android:gravity="center_vertical|right"
                                     android:hint="0.00"
                                     android:inputType="numberDecimal"
                                     android:maxLength="@string/maxlength"
-                                    android:singleLine="true"
-                                    android:text=""
                                     android:textColor="@color/primary_black"
-                                    android:textColorHint="@color/light_gray"
-                                    android:textCursorDrawable="@drawable/cursor_color_text"
-                                    android:textDirection="rtl"
-                                    android:textSize="@dimen/_53ssp"
-                                    app:layout_constraintBottom_toBottomOf="parent"
-                                    app:layout_constraintEnd_toEndOf="parent"
-                                    app:layout_constraintHorizontal_bias="0.222"
-                                    app:layout_constraintStart_toStartOf="parent"
-                                    app:layout_constraintTop_toTopOf="parent"
-                                    app:layout_constraintVertical_bias="0.0" />
+                                    android:textCursorDrawable="@drawable/cursorcolor"
+                                    android:textSize="@dimen/_53ssp" />
+
+                                <TextView
+                                    android:id="@+id/coyniTV"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:text=" CYN"
+                                    android:textColor="@color/primary_black"
+                                    android:textSize="@dimen/_12ssp"
+                                    android:visibility="visible"></TextView>
                             </LinearLayout>
 
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="2"
-                                android:gravity="bottom"
-                                android:orientation="horizontal"
-                                android:paddingBottom="@dimen/_4sdp">
+                            <ImageView
+                                android:id="@+id/imgConvert"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="@dimen/_7sdp"
+                                android:layout_marginTop="@dimen/_8sdp"
+                                android:src="@drawable/ic_download" />
 
-                                <androidx.constraintlayout.widget.ConstraintLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
-
-                                    <TextView
-                                        android:id="@+id/coyniTV"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginEnd="1dp"
-                                        android:fontFamily="@font/opensans_bold"
-                                        android:text="CYN"
-                                        android:textColor="@color/primary_black"
-                                        android:textSize="@dimen/_11ssp"
-                                        app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintHorizontal_bias="0.079"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"
-                                        app:layout_constraintVertical_bias="0.733" />
-
-                                    <ImageView
-                                        android:id="@+id/imgConvert"
-                                        android:layout_width="@dimen/_21sdp"
-                                        android:layout_height="@dimen/_21sdp"
-                                        android:layout_gravity="center"
-                                        android:src="@drawable/ic_component_arrow"
-                                        app:layout_constraintBottom_toBottomOf="parent"
-                                        app:layout_constraintEnd_toEndOf="parent"
-                                        app:layout_constraintHorizontal_bias="0.422"
-                                        app:layout_constraintStart_toStartOf="parent"
-                                        app:layout_constraintTop_toTopOf="parent"
-                                        app:layout_constraintVertical_bias="0.708" />
-                                </androidx.constraintlayout.widget.ConstraintLayout>
-                            </LinearLayout>
-                        </LinearLayout>
+                        </RelativeLayout>
 
                         <LinearLayout
                             android:id="@+id/lyBalance"
@@ -309,8 +274,9 @@
                                 android:id="@+id/addNoteTV"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_marginStart="@dimen/_8sdp"
+                                android:layout_marginStart="@dimen/_15sdp"
                                 android:layout_marginTop="@dimen/_15sdp"
+                                android:layout_marginEnd="@dimen/_15sdp"
                                 android:layout_marginBottom="@dimen/_40sdp"
                                 android:fontFamily="@font/opensans_regular"
                                 android:hint="Optional: Add Note (Maximum 120 characters )"
@@ -336,39 +302,38 @@
         <LinearLayout
             android:id="@+id/payRequestLL"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_43sdp"
             android:background="@drawable/payrequest_bgcolor"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/requestTV"
-                android:layout_width="wrap_content"
+                android:id="@+id/tvRequest"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/opensans_bold"
-                android:paddingStart="@dimen/_44sdp"
-                android:paddingTop="@dimen/_11sdp"
-                android:paddingEnd="@dimen/_54sdp"
-                android:paddingBottom="@dimen/_11sdp"
                 android:text="Request"
                 android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_13ssp" />
+                android:textSize="@dimen/_12ssp" />
 
             <View
                 android:layout_width="@dimen/_2sdp"
-                android:layout_height="@dimen/_28sdp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:background="@drawable/round_background" />
 
             <TextView
-                android:id="@+id/payTV"
+                android:id="@+id/tvPay"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:fontFamily="@font/opensans_bold"
-                android:paddingStart="@dimen/_70sdp"
-                android:paddingTop="@dimen/_11sdp"
-                android:paddingBottom="@dimen/_11sdp"
                 android:text="Pay"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
