--- a/app/src/main/res/layout/activity_retrieve_email.xml
+++ b/app/src/main/res/layout/activity_retrieve_email.xml
@@ -118,7 +118,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="First Name"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textCapSentences"
                         android:longClickable="false"
                         android:maxLength="30"
                         android:maxLines="1"
@@ -182,7 +182,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="Last Name"
                         android:imeOptions="actionDone"
-                        android:inputType="text|textNoSuggestions"
+                        android:inputType="text|textCapSentences"
                         android:longClickable="false"
                         android:maxLength="30"
                         android:maxLines="1"
