--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -3,9 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/et_bg_gray"
-    >
+    android:orientation="vertical">
 
 
     <LinearLayout
@@ -144,26 +143,27 @@
                                 android:textColor="@color/dark_grey"
                                 android:textSize="@dimen/_11ssp" />
 
-                        <TextView
-                            android:id="@+id/withBankStatusTV"
-                            android:layout_width="@dimen/_68sdp"
-                            android:layout_height="@dimen/_14sdp"
-                            android:layout_marginTop="@dimen/_6sdp"
-                            android:fontFamily="@font/opensans_bold"
-                            android:gravity="center"
-                            android:text="Completed"
-                            android:background="@drawable/txn_completed_bg"
-                            android:textColor="@color/active_green"
-                            android:textSize="@dimen/_7sdp" />
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:paddingLeft="@dimen/_11sdp"
-                        android:paddingBottom="@dimen/_11sdp"
-                        android:paddingTop="@dimen/_8sdp"
-                        android:paddingRight="@dimen/_11sdp"
+                            <TextView
+                                android:id="@+id/withBankStatusTV"
+                                android:layout_width="@dimen/_68sdp"
+                                android:layout_height="@dimen/_14sdp"
+                                android:layout_marginTop="@dimen/_6sdp"
+                                android:background="@drawable/txn_completed_bg"
+                                android:fontFamily="@font/opensans_bold"
+                                android:gravity="center"
+                                android:text="Completed"
+                                android:textColor="@color/active_green"
+                                android:textSize="@dimen/_7sdp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal"
+                            android:paddingLeft="@dimen/_11sdp"
+                            android:paddingTop="@dimen/_8sdp"
+                            android:paddingRight="@dimen/_11sdp"
+                            android:paddingBottom="@dimen/_11sdp"
 
                             >
 
