--- a/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
@@ -7,11 +7,6 @@
     android:orientation="vertical"
     android:padding="@dimen/_12sdp">
 
-    <!--    <ScrollView-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:scrollbars="none">-->
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,10 +20,11 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/imgLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_30sdp"
                 android:layout_marginBottom="@dimen/_23sdp"
                 android:src="@drawable/ic_in_progress_icon" />
 
@@ -43,11 +39,25 @@
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
+            <TextView
+                android:id="@+id/tvSuccess"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:text="Request Sent Successful"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp"
+                android:visibility="gone" />
+
             <LinearLayout
+                android:id="@+id/lyAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_9sdp"
                 android:layout_marginBottom="@dimen/_5sdp"
+                android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
                 <TextView
@@ -55,7 +65,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_67sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
                     android:paddingLeft="@dimen/_10sdp"
@@ -75,6 +84,19 @@
                     android:text="200.00"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_35sdp" />
+
+                <TextView
+                    android:id="@+id/tvCurrency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_7sdp"
+                    android:fontFamily="@font/opensans_bold"
+                    android:text="CYN"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp"
+                    android:visibility="gone"></TextView>
             </LinearLayout>
 
             <TextView
@@ -89,9 +111,10 @@
                 android:textSize="@dimen/_11ssp" />
 
             <LinearLayout
+                android:id="@+id/lyReference"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_41sdp"
+                android:layout_marginTop="@dimen/_30sdp"
                 android:orientation="horizontal"
                 android:paddingStart="@dimen/_10sdp"
                 android:paddingEnd="@dimen/_10sdp">
@@ -139,7 +162,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_20sdp"
             android:orientation="vertical">
 
             <TextView
@@ -154,6 +177,7 @@
                 android:textSize="@dimen/_10sdp" />
 
             <LinearLayout
+                android:id="@+id/lyMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -182,7 +206,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_14sdp"
-                android:layout_marginBottom="@dimen/_32sdp"
+                android:layout_marginBottom="@dimen/_25sdp"
                 android:gravity="center"
                 app:cardBackgroundColor="#00a6a2"
                 app:cardCornerRadius="@dimen/_20sdp">
