--- a/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_transactions.xml
@@ -184,9 +184,7 @@
                             android:paddingLeft="@dimen/_11sdp"
                             android:paddingTop="@dimen/_8sdp"
                             android:paddingRight="@dimen/_10sdp"
-                            android:paddingBottom="@dimen/_11sdp"
-
-                            >
+                            android:paddingBottom="@dimen/_11sdp">
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -490,7 +488,7 @@
                             <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:layout_weight=".7"
+                                android:layout_weight=".9"
                                 android:fontFamily="@font/opensans_regular"
                                 android:text="Recipient Email"
                                 android:textColor="@color/dark_grey"
@@ -500,9 +498,9 @@
                                 android:id="@+id/withGiftReciEmailTV"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
+                                android:layout_weight="1.1"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:gravity="right"
-                                android:layout_weight="1.3"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
 
