--- a/app/src/main/res/layout/pay_order_preview.xml
+++ b/app/src/main/res/layout/pay_order_preview.xml
@@ -23,11 +23,12 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tvHeading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
             android:gravity="center"
-            android:text="Paying "
+            android:text="Paying"
             android:textColor="@color/black"
             android:textSize="@dimen/_12ssp" />
 
@@ -35,9 +36,10 @@
             android:id="@+id/userNamePayTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_5sdp"
             android:fontFamily="@font/opensans_semibold"
             android:gravity="center"
-            android:text="[Alison L]"
+            android:text=""
             android:textColor="@color/black"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
@@ -115,6 +117,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lyProcessing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_11sdp"
@@ -146,19 +149,17 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lyTotal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_17sdp"
         android:layout_marginRight="@dimen/_11sdp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_weight="1"
             android:fontFamily="@font/opensans_bold"
             android:text="Total "
@@ -169,15 +170,11 @@
             android:id="@+id/tvTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginRight="@dimen/_6sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:layout_weight="1"
             android:fontFamily="@font/opensans_bold"
             android:gravity="right"
             android:text="161.00 CYN"
             android:textColor="@color/primary_color"
-            android:textFontWeight="1"
             android:textSize="@dimen/_12ssp" />
     </LinearLayout>
 
@@ -185,16 +182,15 @@
         android:id="@+id/lyMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_11sdp"
+        android:layout_marginTop="@dimen/_17sdp"
+        android:layout_marginRight="@dimen/_11sdp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/messageTxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_6sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="Message"
             android:textColor="@color/dark_grey"
@@ -204,13 +200,10 @@
             android:id="@+id/messageNoteTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_21sdp"
             android:layout_marginTop="@dimen/_6sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_20sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="“Hey friend, thanks for dinner the other night. \nHere’s what you owe me for my meal.”"
-            android:textColor="#151515"
+            android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
@@ -218,7 +211,10 @@
         android:id="@+id/slideToConfirm"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_48sdp"
-        android:layout_margin="@dimen/_20sdp"
+        android:layout_marginLeft="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginRight="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_30sdp"
         android:background="@drawable/shape_round_rectable"
         android:elevation="@dimen/_2sdp"
         app:layoutDescription="@xml/activity_swipe_unloack_scene"
