--- a/app/src/main/res/layout/fragment_set_limit.xml
+++ b/app/src/main/res/layout/fragment_set_limit.xml
@@ -54,21 +54,19 @@
                 android:layout_height="@dimen/_70sdp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center"
-                android:layout_toRightOf="@id/amontDollorTV"
                 android:background="@android:color/transparent"
                 android:cursorVisible="true"
                 android:fontFamily="@font/opensans_bold"
                 android:gravity="center_vertical|right"
                 android:hint="0.00"
                 android:ellipsize="end"
-                android:maxLength="11"
+                android:maxLength="@string/maxlength"
                 android:singleLine="true"
                 android:inputType="numberDecimal"
                 android:text=""
                 android:textColor="@color/primary_black"
                 android:textColorHint="@color/light_gray"
                 android:textCursorDrawable="@drawable/cursor_color_text"
-                android:textDirection="rtl"
                 android:textSize="@dimen/_48ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
