--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -88,7 +88,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="@dimen/_5sdp"
-                        android:gravity="center"
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
@@ -97,7 +96,8 @@
                             android:layout_height="@dimen/_6sdp"
                             android:layout_marginRight="@dimen/_5sdp"
                             app:cardBackgroundColor="@color/primary_color"
-                            app:cardCornerRadius="5dp" />
+                            app:cardCornerRadius="5dp"
+                            android:layout_gravity="center"/>
 
                         <TextView
                             android:id="@+id/subject"
