--- a/app/src/main/res/layout/activity_identity_verification.xml
+++ b/app/src/main/res/layout/activity_identity_verification.xml
@@ -379,13 +379,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
                     android:hint="@string/mailingaddress1"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/light_gray"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
-                    app:expandedHintEnabled="false"
                     app:hintTextColor="@color/primary_color">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -394,7 +393,6 @@
                         android:layout_height="wrap_content"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/mailingaddresshint"
                         android:imeOptions="actionNext"
                         android:inputType="textPostalAddress|textNoSuggestions"
                         android:maxLength="100"
@@ -442,13 +440,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
                     android:hint="@string/mailingaddress2"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/light_gray"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
-                    app:expandedHintEnabled="false"
                     app:hintTextColor="@color/primary_color">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -457,7 +454,6 @@
                         android:layout_height="wrap_content"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/mailingaddresshint2"
                         android:imeOptions="actionNext"
                         android:inputType="textPostalAddress|textNoSuggestions"
                         android:maxLength="100"
@@ -505,13 +501,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20sp"
                     android:hint="@string/city"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/light_gray"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
-                    app:expandedHintEnabled="false"
                     app:hintTextColor="@color/primary_color">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -520,7 +515,6 @@
                         android:layout_height="wrap_content"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/cityhint"
                         android:imeOptions="actionNext"
                         android:inputType="text|textNoSuggestions"
                         android:maxLength="50"
@@ -588,13 +582,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/state"
-                        android:textColorHint="@color/black"
+                        android:textColorHint="@color/light_gray"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                         app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                         app:boxCornerRadiusTopStart="@dimen/_10sdp"
                         app:boxStrokeColor="@color/primary_color"
-                        app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_color"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -608,7 +601,6 @@
                             android:editable="false"
                             android:focusable="false"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="@string/statehint"
                             android:imeOptions="actionNext"
                             android:importantForAutofill="no"
                             android:inputType="textEmailAddress|textNoSuggestions"
@@ -633,13 +625,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_14sdp"
                     android:hint="@string/zip"
-                    android:textColorHint="@color/black"
+                    android:textColorHint="@color/light_gray"
                     app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                     app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                     app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                     app:boxCornerRadiusTopStart="@dimen/_10sdp"
                     app:boxStrokeColor="@color/primary_color"
-                    app:expandedHintEnabled="false"
                     app:hintTextColor="@color/primary_color">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -648,7 +639,6 @@
                         android:layout_height="wrap_content"
                         android:digits="0123456789"
                         android:fontFamily="@font/opensans_semibold"
-                        android:hint="@string/ziphint"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
                         android:inputType="number|textNoSuggestions"
