--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -97,13 +97,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/new_password"
-                            android:textColorHint="@color/primary_black"
+                            android:textColorHint="@color/light_gray"
                             app:boxStrokeColor="@color/primary_green"
                             app:endIconDrawable="@drawable/ic_eyeclose"
                             app:endIconMode="custom"
                             app:endIconTint="@color/xdark_gray"
                             app:errorIconDrawable="@null"
-                            app:expandedHintEnabled="false"
                             app:hintTextColor="@color/primary_green">
 
                             <com.google.android.material.textfield.TextInputEditText
@@ -112,7 +111,6 @@
                                 android:layout_height="wrap_content"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:hint="8-12 Characters"
                                 android:imeOptions="actionNext"
                                 android:inputType="textPassword"
                                 android:maxLength="12"
@@ -184,7 +182,7 @@
                         android:layout_below="@+id/tvPasswordInfo"
                         android:layout_marginTop="@dimen/_20sdp"
                         android:hint="Confirm Password"
-                        android:textColorHint="@color/primary_black"
+                        android:textColorHint="@color/light_gray"
                         app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                         app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                         app:boxCornerRadiusTopEnd="@dimen/_10sdp"
@@ -194,7 +192,6 @@
                         app:endIconMode="custom"
                         app:endIconTint="@color/xdark_gray"
                         app:errorIconDrawable="@null"
-                        app:expandedHintEnabled="false"
                         app:hintTextColor="@color/primary_green">
 
                         <com.google.android.material.textfield.TextInputEditText
@@ -203,7 +200,6 @@
                             android:layout_height="wrap_content"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
                             android:fontFamily="@font/opensans_semibold"
-                            android:hint="@string/confirm_password"
                             android:imeOptions="actionDone"
                             android:inputType="textPassword"
                             android:maxLength="12"
