--- a/app/src/main/res/layout/activity_pay_request_scan.xml
+++ b/app/src/main/res/layout/activity_pay_request_scan.xml
@@ -111,10 +111,10 @@
             android:layout_alignParentLeft="true"
             android:layout_gravity="center"
             android:scaleType="fitXY"
-            app:layout_constraintHorizontal_bias="0.195"
             android:src="@drawable/ic_flashicon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.195"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.75" />
@@ -163,7 +163,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/scannerLayout"
         android:layout_width="match_parent"
@@ -203,7 +202,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <androidx.cardview.widget.CardView
                 android:id="@+id/cvQRcode"
                 android:layout_width="match_parent"
@@ -258,17 +256,41 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="@dimen/_6sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text=""
+                        android:text="dfbcbsbs"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_14ssp" />
+
+                    <View
+                        android:id="@+id/viewLine"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_1sdp"
+                        android:layout_below="@id/tvName"
+                        android:layout_marginTop="@dimen/_8sdp"
+                        android:layout_marginStart="@dimen/_11sdp"
+                        android:layout_marginEnd="@dimen/_11sdp"
+                        android:background="@color/viewcolor"/>
+                    <TextView
+                        android:id="@+id/messageQr"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Set amount to request a payment or scan QR\n code to pay me"
+                        android:layout_marginStart="@dimen/_12sdp"
+                        android:layout_marginEnd="@dimen/_12sdp"
+                        android:textAlignment="center"
+                        android:textSize="@dimen/_11ssp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:textColor="@color/xdark_gray"
+                        android:layout_marginTop="@dimen/_13sdp"
+                        android:layout_below="@id/viewLine"
+                        />
 
                     <RelativeLayout
                         android:id="@+id/qrViewRL"
                         android:layout_width="@dimen/_146sdp"
                         android:layout_height="@dimen/_144sdp"
-                        android:layout_below="@+id/tvName"
+                        android:layout_below="@+id/messageQr"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="@dimen/_13sdp"
+                        android:layout_marginTop="@dimen/_14sdp"
                         android:background="@drawable/ic_qr_img_outline">
 
                         <ImageView
@@ -397,13 +419,20 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/divider"
                         android:layout_marginTop="@dimen/_25sdp"
-                        android:paddingLeft="@dimen/_40sdp"
-                        android:paddingRight="@dimen/_35sdp">
+                        android:layout_marginStart="@dimen/_36sdp"
+                        >
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:orientation="vertical"
+                            >
 
                         <ImageView
                             android:id="@+id/imgCopy"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_17sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_marginStart="@dimen/_5sdp"
                             android:src="@drawable/ic_copy" />
 
                         <TextView
@@ -414,11 +443,20 @@
                             android:text="Copy"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="@dimen/_35sdp"
+                            android:orientation="vertical"
+                            >
 
                         <ImageView
                             android:id="@+id/imgShare"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="@dimen/_18sdp"
+                            android:layout_height="@dimen/_20sdp"
+                            android:layout_marginStart="@dimen/_5sdp"
                             android:layout_alignParentRight="true"
                             android:src="@drawable/ic_share" />
 
@@ -432,42 +470,46 @@
 
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_11ssp" />
+                        </LinearLayout>
                     </RelativeLayout>
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
         </RelativeLayout>
     </ScrollView>
+
     <LinearLayout
         android:id="@+id/saveToAlbumLL"
         android:layout_width="@dimen/_286sdp"
-        android:layout_height="@dimen/_463sdp"
+        android:layout_height="wrap_content"
+        android:background="@color/primary_green"
+        android:orientation="vertical"
         android:paddingTop="@dimen/_26sdp"
         android:paddingBottom="@dimen/_56sdp"
-        android:visibility="invisible"
-        android:background="@color/primary_green"
-        android:orientation="vertical">
+        android:visibility="invisible">
+
         <ImageView
             android:layout_width="@dimen/_115sdp"
             android:layout_height="@dimen/_46sdp"
-            android:src="@drawable/ic_coyni_logo_full_white"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:src="@drawable/ic_coyni_logo_full_white" />
+
         <LinearLayout
             android:layout_width="@dimen/_264sdp"
-            android:layout_height="@dimen/_311sdp"
-            android:layout_marginTop="@dimen/_22sdp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_11sdp"
+            android:layout_marginTop="@dimen/_22sdp"
             android:layout_marginEnd="@dimen/_11sdp"
-            android:paddingBottom="@dimen/_22sdp"
             android:background="@drawable/saveimagebg"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/_22sdp">
 
 
             <androidx.cardview.widget.CardView
                 android:layout_width="@dimen/_34sdp"
                 android:layout_height="@dimen/_34sdp"
-                android:layout_marginTop="@dimen/_11sdp"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_11sdp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="@dimen/_17sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -498,15 +540,14 @@
             </androidx.cardview.widget.CardView>
 
 
-
             <TextView
                 android:id="@+id/tvNameSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Alison L"
-                android:layout_gravity="center"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -514,70 +555,65 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
                 android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginEnd="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_8sdp"
-                android:background="@color/vlight_gray"/>
+                android:layout_marginEnd="@dimen/_11sdp"
+                android:background="@color/vlight_gray" />
 
             <LinearLayout
                 android:id="@+id/setAmountLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:visibility="visible"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="invisible">
+
                 <TextView
                     android:id="@+id/tvsaveSetAmount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="160.00"
-                    android:textColor="@color/primary_green"
-                    android:textSize="@dimen/_24ssp"
                     android:fontFamily="@font/opensans_bold"
-                    />
+                    android:text="160.00"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:textColor="@color/primary_green"
+                    android:textSize="@dimen/_24ssp" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="CYN"
+                    android:layout_marginStart="@dimen/_6sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:layout_marginStart="@dimen/_6sdp"
-                    android:textSize="@dimen/_11ssp"
-                    android:textColor="@color/primary_black"/>
+                    android:text="CYN"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="@dimen/_144sdp"
                 android:layout_height="@dimen/_144sdp"
-                android:background="@drawable/ic_qr_img_outline"
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_4sdp"
-                >
+                android:background="@drawable/ic_qr_img_outline">
+
                 <ImageView
                     android:id="@+id/qrImageIV"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/_5sdp"
-                    />
-
-
+                    android:layout_margin="@dimen/_5sdp" />
 
 
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_17sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:textSize="@dimen/_11ssp"
                 android:text="Use “Scan” in coyni app to scan the QR code "
                 android:textColor="@color/dark_grey"
-                android:layout_gravity="center"
-                />
-
-
-
-
-
-
+                android:textSize="@dimen/_11ssp" />
 
 
         </LinearLayout>
