--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -525,10 +525,12 @@
 
                             <TextView
                                 android:id="@+id/withBankBanknameTV"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="right"
+                                android:layout_weight="1"
                                 android:fontFamily="@font/opensans_semibold"
+                                android:singleLine="true"
                                 android:text="Bank of America"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
