--- a/app/src/main/res/layout/recentuserlistitem.xml
+++ b/app/src/main/res/layout/recentuserlistitem.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/opensans_semibold"
-            android:text="AL"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="@dimen/_16ssp"></TextView>
 
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
-            android:text="Alison L"
+            android:text=""
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"></TextView>
 
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:maxLines="1"
             android:singleLine="true"
-            android:text="Account Address hsdj89378"
+            android:text=""
             android:textColor="@color/dark_grey"
             android:textSize="@dimen/_9ssp"></TextView>
     </LinearLayout>
