--- a/app/src/main/res/layout/activity_pay_request.xml
+++ b/app/src/main/res/layout/activity_pay_request.xml
@@ -338,213 +338,213 @@
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
 
-        <com.greenbox.coyni.utils.keyboards.PayRequestCustomKeyboard
-            android:id="@+id/payReqCK"
+<!--        <com.greenbox.coyni.utils.keyboards.PayRequestCustomKeyboard-->
+<!--            android:id="@+id/payReqCK"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            />-->
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="wrap_content"
+            android:background="#FDFDFD"
+            android:orientation="horizontal">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="#FDFDFD"-->
-<!--            android:orientation="horizontal">-->
+            <TextView
+                android:id="@+id/keyOneTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="1"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyOneTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="1"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyTwoTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="2"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyTwoTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="2"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyThreeTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="3"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyThreeTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="3"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+        </LinearLayout>
 
-<!--        </LinearLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FDFDFD"
+            android:orientation="horizontal">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="#FDFDFD"-->
-<!--            android:orientation="horizontal">-->
+            <TextView
+                android:id="@+id/keyFourTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="4"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyFourTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="4"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyFiveTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="5"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyFiveTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="5"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keySixTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="6"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
+        </LinearLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/keySixTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="6"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
-<!--        </LinearLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FDFDFD"
+            android:orientation="horizontal">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="#FDFDFD"-->
-<!--            android:orientation="horizontal">-->
+            <TextView
+                android:id="@+id/keySevenTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="7"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keySevenTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="7"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyEightTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="8"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyEightTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="8"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyNineTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="9"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
+        </LinearLayout>
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyNineTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="9"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
-<!--        </LinearLayout>-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:background="#FDFDFD"
+            android:orientation="horizontal">
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="5dp"-->
-<!--            android:background="#FDFDFD"-->
-<!--            android:orientation="horizontal">-->
+            <TextView
+                android:id="@+id/keyZeroTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="0"
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyZeroTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="0"-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <TextView
+                android:id="@+id/keyDotTV"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:background="@drawable/custom_keyboard_key_bg"
+                android:fontFamily="@font/opensans_bold"
+                android:padding="@dimen/_7sdp"
+                android:text="."
+                android:textAlignment="center"
+                android:textColor="@color/primary_black"
+                android:textSize="@dimen/_16ssp" />
 
-<!--            <TextView-->
-<!--                android:id="@+id/keyDotTV"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:background="@drawable/custom_keyboard_key_bg"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:padding="@dimen/_7sdp"-->
-<!--                android:text="."-->
-<!--                android:textAlignment="center"-->
-<!--                android:textColor="@color/primary_black"-->
-<!--                android:textSize="@dimen/_16ssp" />-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/opensans_bold"
+                android:gravity="center"
+                android:padding="@dimen/_7sdp">
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_margin="5dp"-->
-<!--                android:layout_weight="1"-->
-<!--                android:fontFamily="@font/opensans_bold"-->
-<!--                android:gravity="center"-->
-<!--                android:padding="@dimen/_7sdp">-->
+                <ImageView
+                    android:id="@+id/backActionIV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_outline_backspace"
+                    android:textAlignment="center" />
+            </LinearLayout>
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/backActionIV"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:src="@drawable/ic_outline_backspace"-->
-<!--                    android:textAlignment="center" />-->
-<!--            </LinearLayout>-->
-
-<!--        </LinearLayout>-->
+        </LinearLayout>
 
     </LinearLayout>
 
