--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -25,4 +25,17 @@
     <dimen name="pv_pin_view_item_spacing">5dp</dimen>
     <dimen name="pv_pin_view_item_line_width">2dp</dimen>
     <dimen name="pv_pin_view_cursor_width">2dp</dimen>
+
+
+    <!--    Vertical calendar-->
+    <dimen name="calendar_day_height">36dp</dimen>
+    <dimen name="calendar_day_gap">8dp</dimen>
+    <dimen name="calendar_day_textsize">12sp</dimen>
+
+    <dimen name="calendar_month_padding">16dp</dimen>
+    <dimen name="calendar_month_textsize">16sp</dimen>
+
+    <dimen name="calendar_week_textsize">12sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
 </resources>
