--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -49,12 +49,11 @@
     <color name="colorAccent">#03DAC5</color>
 
 
-
     <!--Background color-->
     <color name="calendar_picker_bg">#00FFFFFF</color>
 
     <color name="calendar_day_unselected_bg">#00000000</color>
-    <color name="calendar_day_selected_bg">#FF018786</color>
+    <color name="calendar_day_selected_bg">#00A6A2</color>
     <color name="calendar_day_range_selected_bg">#22018786</color>
 
     <!--Font color-->
@@ -82,7 +81,6 @@
     <color name="balance">#404040</color>
 
     <color name="notif_delete_bg">#FCE9E8</color>
-
 
 
 </resources>
