Bug Fixes on Pay/Request

--- a/app/src/main/res/layout/activity_add_recipient.xml
+++ b/app/src/main/res/layout/activity_add_recipient.xml
@@ -82,6 +82,7 @@
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789- "
                         android:hint="Name / Account Address "
                         android:imeOptions="actionDone"
+                        android:maxLength="60"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/primary_black"
