--- a/app/src/main/res/layout/fragment_set_limit.xml
+++ b/app/src/main/res/layout/fragment_set_limit.xml
@@ -63,7 +63,7 @@
                 android:text=""
                 android:textColor="@color/primary_black"
                 android:textColorHint="@color/light_gray"
-                android:textCursorDrawable="@drawable/cursor_color_text"
+                android:textCursorDrawable="@drawable/cursorcolor"
                 android:textSize="@dimen/_53ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
