--- a/app/src/main/res/layout/recentuserlistitem.xml
+++ b/app/src/main/res/layout/recentuserlistitem.xml
@@ -36,6 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_11sdp"
+        android:layout_marginRight="@dimen/_5sdp"
+        android:layout_toLeftOf="@+id/imgInvite"
         android:layout_toRightOf="@+id/cvUserInfo"
         android:orientation="vertical">
 
@@ -44,6 +46,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
+            android:maxLines="1"
+            android:singleLine="true"
             android:text=""
             android:textColor="@color/primary_black"
             android:textSize="@dimen/_11ssp"></TextView>
@@ -65,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:src="@drawable/ic_invite"
-        android:visibility="gone"></ImageView>
+        android:visibility="visible"></ImageView>
 
     <View
         android:layout_width="match_parent"
