--- a/app/src/main/res/layout/recentuserlistitem.xml
+++ b/app/src/main/res/layout/recentuserlistitem.xml
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:src="@drawable/ic_invite"
-        android:visibility="visible"></ImageView>
+        android:visibility="gone"></ImageView>
 
     <View
         android:layout_width="match_parent"
