--- a/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
+++ b/app/src/main/res/layout/activity_withdraw_bank_acc_transctn.xml
@@ -525,11 +525,14 @@
 
                             <TextView
                                 android:id="@+id/withBankBanknameTV"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_gravity="right"
+                                android:textAlignment="textEnd"
+                                android:layout_weight="1"
+                                android:singleLine="true"
+                                android:maxLines="1"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="Bank of America"
+                                android:text="Bank of Americaiudsuicbyovusvysuvsd"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_11ssp" />
                         </LinearLayout>
