--- a/app/src/main/res/layout/activity_withdraw_token.xml
+++ b/app/src/main/res/layout/activity_withdraw_token.xml
@@ -336,6 +336,7 @@
                         android:layout_marginRight="@dimen/_15sdp"
                         android:layout_marginBottom="@dimen/_20sdp"
                         android:fontFamily="@font/opensans_semibold"
+                        android:textColorHint="@color/light_gray"
                         android:hint="Optional: Add Note (Maximum 120 characters )"
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/_10ssp"></TextView>
